--- a/cricles.html
+++ b/cricles.html
@@ -135,6 +135,10 @@
         for (var i = 0; i < circles.length; i++) {
           circles[i].fillColor.hue += 1;
           circles[i].scale(.95);
+          if(circles[i].area < 1){
+            circles[i].remove();
+            circles.splice(i, 1);
+          }
         }
       }
     </script>
